# AI-Game-Programming

./: CMakeLists.txt  Makefile  README.md  Rules2025.txt  ai_random.c  ai_random.h  awelele.c  game.c  game.h  main.c  rapport_ia_game.tex
include/: ai_alpha_beta.h  ai_alpha_beta_nul.h  ai_alphabeta.h  ai_aspiration.h  ai_common.h  ai_minimax.h  ai_mtdf.h  ai_pvs.h  ai_pvs_v2.h  engine.h  game.h  player.h
java/: Arbitre.java  JoueurExterne.java
main/: external_player.c  main.c  replay_game.c  simulation.c  tournament.c
player/: ai_alpha_beta.c  ai_alpha_beta_nul.c  ai_alphabeta.c  ai_aspiration.c  ai_minimax.c  ai_mtdf.c  ai_pvs.c  ai_pvs_v2.c  ai_random.c  player.c
src/: ai_common.c  engine.c  game.c
